--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@ html {
     	radial-gradient(ellipse closest-corner at 60% 40%, rgba(47,44,111,0.3) 0%, rgba(16,15,39, 0.4) 90%),
        radial-gradient(circle farthest-side at 0% 90%, rgba(255,255,255, 0.1) 0%, rgba(11,2,16,0.00) 80%);
 	/*background-image: radial-gradient(100% 40%, rgba(82,48,97,0.3) 0%, rgba(11,2,16,0.00) 50%);*/
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 300;
 }
 
 h1 {
     color: white;
     opacity: 0.8;
     text-align: center;
+    font-weight: 700;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.39);
 }
 
 #me {
