--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
     background-image: radial-gradient(at 70%, rgba(39, 32, 69, 0.4) 0%, rgba(11, 2, 16, 0.00) 80%),
     	radial-gradient(at 70% 100%, rgba(82,48,97,0.4) 0%, rgba(11,2,16,0.00) 80%),
     	radial-gradient(ellipse closest-corner at 60% 40%, rgba(47,44,111,0.3) 0%, rgba(16,15,39, 0.4) 90%),
-       radial-gradient(circle farthest-side at 0% 90%, rgba(255,255,255, 0.1) 0%, rgba(11,2,16,0.00) 80%);
+       radial-gradient(circle farthest-side at 0% 90%, rgba(255,255,255, 0.15) 0%, rgba(11,2,16,0.00) 80%);
 	/*background-image: radial-gradient(100% 40%, rgba(82,48,97,0.3) 0%, rgba(11,2,16,0.00) 50%);*/
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
@@ -49,8 +49,8 @@ h1 {
     left: -15%;
     top: -15%;
     overflow: hidden;
-/*    opacity: 0.0;
-    background-image: url(noise3.png);*/
+    opacity: 0.7;
+    background-image: url(test3.png);
     background-repeat: repeat;
     content: '';
     display: block;
