--- a/style.css
+++ b/style.css
@@ -11,15 +11,24 @@ html {
     font-weight: 300;
 }
 
+#container {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    z-index: 3;
+}
+
 h1 {
     color: white;
     opacity: 0.8;
     text-align: center;
     font-weight: 700;
     text-shadow: 1px 1px rgba(0, 0, 0, 0.39);
+    margin-bottom: 0px;
 }
 
-#me {
+#content {
     margin: auto;
     height: 100px;
     position: absolute;
@@ -29,15 +38,28 @@ h1 {
     left: 40px;
     text-align: left;
     z-index: 4;
+    display: inline-block;
 }
 
-#container {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-    z-index: 3;
+#title {
+    float: left;
 }
+
+#description {
+    float: right;
+}
+
+p {
+    color: white;
+}
+
+p#tagline {
+    color: rgba(255, 255, 255, 0.30);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    margin: 0px;
+}
+
 #noise {
 /*    -webkit-animation: grainy 2s steps(4) infinite;
     -moz-animation: grainy 2s steps(4) infinite;
