--- a/style.css
+++ b/style.css
@@ -19,8 +19,30 @@ html {
     z-index: 3;
 }
 
+#content {
+    position: absolute;
+    z-index: 4;
+
+    height: 150px;
+    overflow: auto;
+    margin: auto;
+    top: 0; 
+    bottom: 0; 
+    right: auto; 
+    left: 50px;
+}
+
 #title {
     display: block;
+    width: 100%;
+    padding-left: 10px;
+}
+
+canvas#westin{
+/*    width: 100%;
+    height: 10px;*/
+    border-radius: 3px;
+    float: left;
 }
 
 h1 {
@@ -34,33 +56,37 @@ h1 {
 }
 
 h2 {
-    color: rgba(255, 255, 255, 0.40);
+    color: rgba(255, 255, 255, 0.9);
+    /*color: red;*/
+    /*color: rgba(0, 0, 0, 0.70);*/
     text-transform: uppercase;
-    letter-spacing: 3.4px;
-    margin: 0px;
-}
-
-
-#content {
-    height: 100px;
-    position: absolute;
-    margin-top: 20%;
-    left: 70px;
-    width: 500px;
-    z-index: 4;
+    letter-spacing: 5px;
+    margin-left: 15px;
+    margin-top: 18px;
+    /*position: absolute;*/
+    font-size: 0.8em;
+    float: left;
 }
 
 #description {
-    margin-top: 15px;
-    width: 300px;
+    clear: both;
+    margin-top: 60px;
+    width: 445px;
+    padding-left: 10px;
+    border-left: 1px solid rgba(255, 255, 255, 0.20);
 }
 
 p {
-    font-family: "elena-web-basic";
-    color: white;
-    text-align: left;
+    font-family: "europa";
+    color: rgba(255, 255, 255, 0.70);
+    text-align: justify;
     display: block;
     font-size: 15px;
+    line-height: 20px;
+}
+
+span.highlight {
+    color: white;
 }
 
 
@@ -75,14 +101,14 @@ p {
     top: 0;
     left: 0;
     overflow: hidden;
-    opacity: 0.6;
+    opacity: 0.9;
     background-image: url(test3.png);
     background-repeat: repeat;
     content: '';
     display: block;
     z-index: 1;
 }
-canvas {
+canvas#background {
     position: relative;
     z-index: 2;
     height: 100%;
