--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ h1 {
     text-shadow: 1px 1px rgba(0, 0, 0, 0.39);
     margin-bottom: 5px;
     font-size: 2em;
+    display: none;
 }
 
 h2 {
@@ -111,4 +112,75 @@ canvas#background {
     z-index: 2;
     height: 100%;
     width: 100%;
+}
+
+
+
+@media only screen and (max-width : 535px) {
+    #content {
+        left: 20px;
+    }
+}
+
+
+@media only screen and (max-width : 483px) {
+
+    #content {
+        left: 20px;
+        height: 250px;
+        width: 100%;
+    }
+
+    canvas#westin{
+        display: none;
+    }
+
+    #title{
+        background: rgba(255,255,255,0.1);
+        padding: 10px;
+        width: 80%;
+    }
+
+    h1{
+        display: block;
+        margin-left: 0px;
+    }
+
+    h2{
+        margin-bottom: 0px;
+        margin-top: 0px;
+        margin-left: 0px;
+        letter-spacing: 5.4px;
+        float: none;
+    }
+
+    #description {
+        padding-left: 10px;
+/*        padding-right: 30px;
+        width: 100%;
+        max-width: 350px;*/
+        /*min-width: 200px;*/
+        margin-top: 10px;
+        width: 80%;
+    }
+
+    p {
+        letter-spacing: 0.5px;
+        font-size: 15px;
+        line-height: 21px;
+    }
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 320px) {
+    #content {
+        margin-top: 100px;
+        height: 100%;
+    }
+
+    p {
+        letter-spacing: 0.5px;
+        font-size: 14px;
+        line-height: 21px;
+    }
 }
