--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ canvas#westin{
 }
 
 h1 {
+    font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     color: white;
     opacity: 0.8;
     text-align: left;
