--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ h1 {
     opacity: 0.8;
     text-align: left;
     font-weight: 700;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.39);
     margin-bottom: 5px;
     font-size: 2em;
     display: none;
@@ -138,6 +137,7 @@ canvas#background {
 
     #title{
         background: rgba(255,255,255,0.1);
+        border-radius: 2px;
         padding: 10px;
         width: 80%;
     }
@@ -148,6 +148,7 @@ canvas#background {
     }
 
     h2{
+        color: rgba(255,255,255,0.5);
         margin-bottom: 0px;
         margin-top: 0px;
         margin-left: 0px;
