--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
         radial-gradient(100% 40%, rgba(82,48,97,0.3) 0%, rgba(11,2,16,0.00) 90%);*/
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
+    /*overflow: hidden;*/
 }
 
 #container {
@@ -19,13 +20,16 @@ html {
 }
 
 #content {
-    position: relative;
+    position: absolute;
     z-index: 4;
+
+    height: 230px;
     overflow: auto;
-    margin-left: 50px;
-    width: auto;
-    margin-top: 200px;
-    margin-bottom: 50px;
+    margin: auto;
+    top: 0; 
+    bottom: 0; 
+    right: auto; 
+    left: 50px;
 }
 
 #title {
@@ -118,7 +122,7 @@ a {
 }
 
 #noise {
-    position: fixed;
+    position: absolute;
     height: 100%;
     width: 100%;
     top: 0;
@@ -151,17 +155,15 @@ a {
 
 
 canvas#background {
-    position: fixed;
-    z-index: 1;
+    position: relative;
+    z-index: 2;
     height: 100%;
     width: 100%;
-    top: 0;
-    left: 0;
 }
 
-@media only screen and (max-width : 535px) {
+@media only screen and (max-width : 556px) {
     #content {
-        margin-left: 20px;
+        left: 20px;
     }
 }
 
@@ -171,8 +173,9 @@ canvas#background {
     #content {
         margin-left: 20px;
         margin-top: 35%;
-        /*height: 250px;*/
-        /*width: 100%;*/
+        height: 280px;
+        width: 100%;
+        left: 0;
     }
 
     canvas#westin{
