--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html {
         radial-gradient(100% 40%, rgba(82,48,97,0.3) 0%, rgba(11,2,16,0.00) 90%);*/
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
-    /*overflow: hidden;*/
 }
 
 #container {
@@ -20,16 +19,13 @@ html {
 }
 
 #content {
-    position: absolute;
+    position: relative;
     z-index: 4;
-
-    height: 230px;
     overflow: auto;
-    margin: auto;
-    top: 0; 
-    bottom: 0; 
-    right: auto; 
-    left: 50px;
+    margin-left: 50px;
+    width: auto;
+    margin-top: 200px;
+    margin-bottom: 50px;
 }
 
 #title {
@@ -122,7 +118,7 @@ a {
 }
 
 #noise {
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
     top: 0;
@@ -155,15 +151,17 @@ a {
 
 
 canvas#background {
-    position: relative;
-    z-index: 2;
+    position: fixed;
+    z-index: 1;
     height: 100%;
     width: 100%;
+    top: 0;
+    left: 0;
 }
 
-@media only screen and (max-width : 556px) {
+@media only screen and (max-width : 535px) {
     #content {
-        left: 20px;
+        margin-left: 20px;
     }
 }
 
@@ -173,9 +171,8 @@ canvas#background {
     #content {
         margin-left: 20px;
         margin-top: 35%;
-        height: 280px;
-        width: 100%;
-        left: 0;
+        /*height: 250px;*/
+        /*width: 100%;*/
     }
 
     canvas#westin{
