change file name

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a {
     left: 0;
     overflow: hidden;
     opacity: 0.9;
-    background-image: url(test3.png);
+    background-image: url(starry.png);
     background-repeat: repeat;
     content: '';
     display: block;
